--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-django_analyze.py
-project_code_dump.txt
-
-.idea/
-.venv/
-
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -42,6 +36,16 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+.DS_*
+logs
+**/*.backup.*
+**/*.back.*
+node_modules
+bower_components
+*.sublime*
+psd
+thumb
+sketch
 *.py[cod]
 *$py.class
 *.so
