--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+backend/.idea/
+backend/.venv/
+
+backend/django_analyze.py
+backend/project_code_dump.txt
+
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
